force-app/main/default/objects/BCDireccion__c/BCDireccion__c.object-meta.xml
<CustomObject>
    <label>Dirección</label>
    <nameField>
        <label>Dirección</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>