force-app/main/default/objects/BCDireccion__c/fields/BCCallePrincipal__c.field-meta.xml
<CustomField>
    <fullName>BCCallePrincipal__c</fullName>
    <label>Calle principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>