force-app/main/default/objects/BCDireccion__c/fields/BCInterseccion__c.field-meta.xml
<CustomField>
    <fullName>BCInterseccion__c</fullName>
    <label>Intersección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>