force-app/main/default/objects/BCDireccion__c/fields/BCNumeracion__c.field-meta.xml
<CustomField>
    <fullName>BCNumeracion__c</fullName>
    <label>Numeración</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>