force-app/main/default/objects/BCDireccion__c/fields/BCTipoCalle__c.field-meta.xml
<CustomField>
    <fullName>BCTipoCalle__c</fullName>
    <label>Tipo calle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Secundaria</fullName>
            </value>
            <value>
                <fullName>Intersección</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>