force-app/main/default/objects/BCDireccion__c/fields/BCTipoDireccion__c.field-meta.xml
<CustomField>
    <fullName>BCTipoDireccion__c</fullName>
    <label>Tipo Dirección</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trabajo</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>